# HuffmanCode

./: CMakeLists.txt
include/: CreatHuffmanTree.h  DecodeHuffmanTree.h  EncodeHuffmanTree.h  HuffmanTreeNode.h  RandomHuffmanTree.h  includes.h
src/: CreatHuffmanTree.cpp  DecodeHuffmanTree.cpp  EncodeHuffmanTree.cpp  HuffmanTreeNode.cpp  RandomHuffmanTree.cpp  main.cpp  mainTest.cpp
